resolve collapsed banner contrast issues (#2867)
* resolve collapsed banner contrast issues

* make dismiss a button rather than span

--- a/src/packages/@ncigdc/uikit/Banner/styles.scss
+++ b/src/packages/@ncigdc/uikit/Banner/styles.scss
@@ -69,9 +69,11 @@
     text-decoration: underline;
   }
 
-  &-dismiss {
+  &-dismiss-button {
+    background: none;
+    border: none;
     cursor: pointer;
-    padding-right: 5px;
+    padding: 0 5px 0 0;
 
     &:hover {
       text-decoration: underline;
